--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fase1</title>
 </head>
 <body>
     <h1>Proyecto de sitio web 2022 - 16-04</h1>
@@ -12,6 +12,9 @@
     <h3>Programa: Ingeniería de sistemas</h3>
     <p>Fecha: Octubre 03 de 2022 <br>
     Telefono: 3017178776
+    </p>
+    <p> Enlace de la Fase 2 <br>
+        <a href="file:///C:/Users/Usuario/Documents/GitHub/DSW-ElizabethOrtega/FASE%202/desing.html"> Fase 2 </a>
     </p>
 </body>
 </html>
