--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     Telefono: 3017178776
     </p>
     <p> Enlace de la Fase 2 <br>
-        <a href="file:///C:/Users/Usuario/Documents/GitHub/DSW-ElizabethOrtega/fase2/desing.html"> Fase 2 </a>
+        <a href="fase2/desing.html"> Fase 2 </a>
     </p>
 </body>
 </html>
